--- a/css/master.css
+++ b/css/master.css
@@ -1,1 +1,1 @@
-.master-cell{height:26px;width:26px}
+.master-cell{height:26px;width:26px}@media screen and (max-width: 600px){.master-cell{aspect-ratio:1;width:100%}}
